--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
                         <span class="u_user"></span>
                         <input name="username" id="username" class="text"
                                style="color: #FFFFFF !important" type="text"
-                               placeholder="请输入用户名">
+                               placeholder="请输入用户名" autocomplete="off">
                     </div>
                     <div class="input_outer">
                         <span class="us_uer"></span>
