--- a/src/main/resources/templates/dictionary.html
+++ b/src/main/resources/templates/dictionary.html
@@ -14,8 +14,8 @@
     <div class="layui-form-item">
         <label class="layui-form-label">字典类型</label>
         <div class="layui-input-block">
-            <input type="text" name="typeId" autocomplete="off" placeholder="字典类型"
-                   class="layui-input">
+            <select name="typeId">
+            </select>
         </div>
     </div>
     <div class="layui-form-item">
@@ -54,19 +54,13 @@
 <!--编辑功能的form-->
 <form class="layui-form" action="" id="updateDicFrom" lay-filter="updateDicFrom"
       style="display: none;margin-right: 40px;margin-top: 20px">
-    <input hidden name="updateBy" th:value="${session.user.userName}">
-    <div class="layui-form-item">
-        <label class="layui-form-label">字典ID</label>
-        <div class="layui-input-block">
-            <input type="text" name="dictionaryId" autocomplete="off" placeholder="字典ID"
-                   readonly="readonly" class="layui-input">
-        </div>
-    </div>
+    <input type="hidden" name="updateBy" th:value="${session.user.userName}">
+    <input type="hidden" name="dictionaryId">
     <div class="layui-form-item">
         <label class="layui-form-label">字典类型</label>
         <div class="layui-input-block">
-            <input type="text" name="typeId" autocomplete="off" placeholder="字典类型"
-                   class="layui-input">
+            <select name="typeId">
+            </select>
         </div>
     </div>
     <div class="layui-form-item">
@@ -171,6 +165,22 @@
                 ]
             ]
         });
+
+        //填充类型下拉框
+        let $typeSelect = $("select[name=typeId]");
+        let options = '';
+        $.ajax({
+            url: "/dictionary/selectAllType",
+            type: "GET",
+            dataType: "JSON",
+            success: function (res) {
+                for (let i = 0; i < res.data.length; i++) {
+                    options += '<option value="' + res.data[i].typeId + '">' + res.data[i].typeName + '</option>';
+                }
+                $typeSelect.html(options);
+            }
+        });
+
         //监听行工具事件
         table.on('tool(dicFilter)', function (obj) {
             let data = obj.data //获得当前行数据
@@ -223,6 +233,7 @@
             switch (obj.event) {
                 case 'addDic':
                     document.getElementById("insertDicFrom").reset();
+                    form.render();
                     layer.open({
                         title: '添加部门',
                         type: 1,
