--- a/src/main/resources/templates/homeIndex.html
+++ b/src/main/resources/templates/homeIndex.html
@@ -18,7 +18,7 @@
      style="background-color: rgb(57,61,73);position:absolute;top:50%;left:50%;transform: translate(-50%,-50%);">
     <div carousel-item="">
         <div>
-            <div id="businessCount" style="height:540px;width: 1000px"></div>
+            <div id="businessCount" style="height:540px"></div>
         </div>
         <div>
             <div id="performanceRanking" style="height:540px;width: 1000px"></div>
@@ -44,7 +44,6 @@
                 $("#money").html("当天收入：" + data.data[2]);
             }
         })
-
 
         //常规轮播
         carousel.render({
