--- a/src/main/resources/templates/dictionaryType.html
+++ b/src/main/resources/templates/dictionaryType.html
@@ -145,9 +145,9 @@
             , cols: [
                 [ //表头
                     {type: 'checkbox', fixed: 'left'}
-                    , {field: 'typeId', title: '类型ID', width: 100}
-                    , {field: 'typeName', title: '类型名称', width: 300}
-                    , {field: 'createBy', title: '创建人', width: 80}
+                    , {field: 'typeId', title: '类型ID', width: 100, sort: true}
+                    , {field: 'typeName', title: '类型名称', width: 120}
+                    , {field: 'createBy', title: '创建人', width: 100}
                     , {field: 'createTime', title: '创建时间', width: 200}
                     , {field: 'updateBy', title: '修改人', width: 100}
                     , {field: 'updateTime', title: '修改时间', width: 200}
