--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,9 @@
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <a id="logo" href="/goto/toIndex"><div class="layui-logo" style="font-size: x-large;margin-left: 1%">商标注册管理系统</div></a>
+        <a id="logo" href="/goto/toIndex">
+            <div class="layui-logo" style="font-size: x-large;margin-left: 1%">商标注册管理系统</div>
+        </a>
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
                 <a href="javascript:;">
@@ -31,10 +33,7 @@
                 <li th:each="layUiTree:${layUiTreeList}" class="layui-nav-item layui-nav-itemed">
                     <a class="" th:text="${layUiTree.title}" th:href="${layUiTree.url}"></a>
                     <dl class="layui-nav-child" th:each="children:${layUiTree.children}">
-                        <dd th:if="${children.url} eq '/goto/toUser'" class="layui-this">
-                            <a th:href="${children.url}" th:text="${children.title}"></a>
-                        </dd>
-                        <dd th:if="${children.url} ne '/goto/toUser'">
+                        <dd>
                             <a th:href="${children.url}" th:text="${children.title}"></a>
                         </dd>
                     </dl>
