--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <a id="logo" href="/goto/toIndex">
+        <a id="logo" href="/home/toIndex">
             <div class="layui-logo" style="font-size: x-large;margin-left: 1%">商标注册管理系统</div>
         </a>
         <ul class="layui-nav layui-layout-right">
@@ -18,7 +18,7 @@
                     [[${session.username}]]
                 </a>
                 <dl class="layui-nav-child">
-                    <dd><a href="/goto/toUserinfo">基本资料</a></dd>
+                    <dd><a href="/home/toUserinfo">基本资料</a></dd>
                     <dd><a href="#">安全设置</a></dd>
                 </dl>
             </li>
@@ -44,7 +44,7 @@
 
     <div class="layui-body">
         <!-- 内容主体区域 -->
-        <iframe id="iframeMain" src="/goto/toIndex" class="layadmin-iframe" frameborder="0"
+        <iframe id="iframeMain" src="/home/toIndex" class="layadmin-iframe" frameborder="0"
                 style="width: 100%;height: 100%"></iframe>
     </div>
 
