--- a/src/main/resources/templates/progress.html
+++ b/src/main/resources/templates/progress.html
@@ -125,6 +125,7 @@
     <input type="hidden" name="destinationName" id="updateDestinationName">
     <input type="hidden" name="progressId">
     <input type="hidden" name="uploadId">
+    <input type="hidden" name="sourceName">
     <div class="layui-form-item">
         <label class="layui-form-label">进度类型</label>
         <div class="layui-input-block">
@@ -146,7 +147,7 @@
             <button type="button" class="layui-btn layui-btn-xs" id="updateAddUpload">上传文件</button>
         </label>
         <div class="layui-input-block">
-            <input type="text" name="sourceName" id="updateAddSourceName"
+            <input type="text" name="upload" id="updateAddSourceName"
                    placeholder="" autocomplete="off" class="layui-input">
         </div>
     </div>
@@ -156,7 +157,7 @@
             <button type="button" class="layui-btn layui-btn-xs" id="updateInformUpload">通知文件</button>
         </label>
         <div class="layui-input-block">
-            <input type="text" name="noticeName" id="updateInformSourceName"
+            <input type="text" name="notice" id="updateInformSourceName"
                    placeholder="" autocomplete="off" class="layui-input">
         </div>
     </div>
