--- a/src/main/resources/templates/dictionaryType.html
+++ b/src/main/resources/templates/dictionaryType.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/layui/css/layui.css">
     <script src="/layui/layui.js"></script>
 </head>
-<body class="layui-layout-body">
+<body>
 <!--添加功能的form-->
 <form class="layui-form" action="" id="insertDicTypeFrom"
       style="display: none;margin-right: 40px;margin-top: 20px">
@@ -141,7 +141,6 @@
             , defaultToolbar: ['filter', 'exports', 'print']
             , title: 'dicTypeTable'
             , page: true
-            , limit: 10
             , cols: [
                 [ //表头
                     {type: 'checkbox', fixed: 'left'}
