--- a/src/main/resources/templates/progress.html
+++ b/src/main/resources/templates/progress.html
@@ -109,7 +109,7 @@
     <div class="layui-form-item layui-form-text">
         <label class="layui-form-label">备注</label>
         <div class="layui-input-block">
-            <input type="text" name="remark" lay-verify="required" placeholder=""
+            <input type="text" name="remark" placeholder=""
                    autocomplete="off" class="layui-input">
         </div>
     </div>
@@ -169,7 +169,7 @@
     <div class="layui-form-item layui-form-text">
         <label class="layui-form-label">备注</label>
         <div class="layui-input-block">
-            <input type="text" name="remark" lay-verify="required" placeholder=""
+            <input type="text" name="remark" placeholder=""
                    autocomplete="off" class="layui-input">
         </div>
     </div>
