--- a/src/main/resources/templates/business.html
+++ b/src/main/resources/templates/business.html
@@ -19,14 +19,6 @@
 <!--添加-->
 <form class="layui-form" action="" id="saveForm" style="display: none;margin-right: 40px;margin-top: 20px">
     <div class="layui-form-item">
-        <label class="layui-form-label">申请号</label>
-        <div class="layui-input-block">
-            <input type="text" name="applicantCode"  placeholder="请输入申请号"
-                   autocomplete="off"
-                   class="layui-input">
-        </div>
-    </div>
-    <div class="layui-form-item">
         <label class="layui-form-label">客户编号</label>
         <div class="layui-input-inline">
             <input type="number" name="customId" id="addCustomTableSelect" readonly th:value="${customId}" required
@@ -41,6 +33,14 @@
         </div>
     </div>
     <div class="layui-form-item">
+        <label class="layui-form-label">申请号</label>
+        <div class="layui-input-block">
+            <input type="text" name="applicantCode" placeholder="请输入申请号"
+                   autocomplete="off"
+                   class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item">
         <label class="layui-form-label">业务名</label>
         <div class="layui-input-block">
             <input type="text" name="businessName" required lay-verify="required" placeholder="请输入业务名"
@@ -51,7 +51,8 @@
     <div class="layui-form-item">
         <label class="layui-form-label">业务种类</label>
         <div class="layui-input-block">
-            <input type="text" name="businessSecondType" readonly id="addBusinessType" required lay-verify="required" placeholder="请选择业务种类"
+            <input type="text" name="businessSecondType" readonly id="addBusinessType" required lay-verify="required"
+                   placeholder="请选择业务种类"
                    autocomplete="off"
                    class="layui-input">
         </div>
@@ -59,7 +60,8 @@
     <div class="layui-form-item">
         <label class="layui-form-label">商标类别</label>
         <div class="layui-input-block">
-            <input type="text" name="trademarkType" readonly id="addTrademarkType" required lay-verify="required" placeholder="请选择商标类别"
+            <input type="text" name="trademarkType" readonly id="addTrademarkType" required lay-verify="required"
+                   placeholder="请选择商标类别"
                    autocomplete="off"
                    class="layui-input">
         </div>
@@ -72,7 +74,8 @@
         </div>
         <label class="layui-form-label">代理费</label>
         <div class="layui-input-inline">
-            <input type="number" name="proxyMoney" required lay-verify="required" placeholder="请输入代理费" autocomplete="off"
+            <input type="number" name="proxyMoney" required lay-verify="required" placeholder="请输入代理费"
+                   autocomplete="off"
                    class="layui-input">
         </div>
     </div>
@@ -80,7 +83,7 @@
         <label class="layui-form-label">申请时间</label>
         <div class="layui-input-inline">
             <input type="text" name="applicantTime" id="date"
-                   autocomplete="off"  class="layui-input">
+                   autocomplete="off" class="layui-input">
         </div>
         <label class="layui-form-label">备注</label>
         <div class="layui-input-inline">
@@ -103,14 +106,7 @@
       style="display: none;margin-right: 40px;margin-top: 20px">
 
     <input hidden type="text" name="businessId">
-    <div class="layui-form-item">
-        <label class="layui-form-label">申请号</label>
-        <div class="layui-input-block">
-            <input type="number" name="applicantCode" placeholder="请输入申请号"
-                   autocomplete="off"
-                   class="layui-input">
-        </div>
-    </div>
+
     <div class="layui-form-item">
         <label class="layui-form-label">客户编号</label>
         <div class="layui-input-inline">
@@ -126,6 +122,14 @@
         </div>
     </div>
     <div class="layui-form-item">
+        <label class="layui-form-label">申请号</label>
+        <div class="layui-input-block">
+            <input type="number" name="applicantCode" placeholder="请输入申请号"
+                   autocomplete="off"
+                   class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item">
         <label class="layui-form-label">业务名</label>
         <div class="layui-input-block">
             <input type="text" name="businessName" required lay-verify="required" placeholder="请输入业务名"
@@ -136,7 +140,8 @@
     <div class="layui-form-item">
         <label class="layui-form-label">业务种类</label>
         <div class="layui-input-block">
-            <input type="text" name="businessSecondType" readonly id="updateBusinessType" required lay-verify="required" placeholder="请选择业务种类"
+            <input type="text" name="businessSecondType" readonly id="updateBusinessType" required lay-verify="required"
+                   placeholder="请选择业务种类"
                    autocomplete="off"
                    class="layui-input">
         </div>
@@ -144,7 +149,8 @@
     <div class="layui-form-item">
         <label class="layui-form-label">商标类别</label>
         <div class="layui-input-block">
-            <input type="text" name="trademarkType" readonly required lay-verify="required" id="updateTrademarkType" placeholder="请选择商标类别"
+            <input type="text" name="trademarkType" readonly required lay-verify="required" id="updateTrademarkType"
+                   placeholder="请选择商标类别"
                    autocomplete="off"
                    class="layui-input">
         </div>
@@ -157,7 +163,8 @@
         </div>
         <label class="layui-form-label">代理费</label>
         <div class="layui-input-inline">
-            <input type="number" name="proxyMoney" required lay-verify="required" placeholder="请输入代理费" autocomplete="off"
+            <input type="number" name="proxyMoney" required lay-verify="required" placeholder="请输入代理费"
+                   autocomplete="off"
                    class="layui-input">
         </div>
     </div>
@@ -216,7 +223,7 @@
 <div class="layui-col-md12">
     <div class="layui-card">
         <div class="layui-card-body">
-<table id="businessTable" lay-filter="test"></table>
+            <table id="businessTable" lay-filter="test"></table>
         </div>
     </div>
 </div>
@@ -258,7 +265,7 @@
         //设定组件别名
         tableSelect: 'tableSelect',
     });
-    layui.use(['table', 'layer', 'jquery', 'laydate', 'form','tableSelect'], function () {
+    layui.use(['table', 'layer', 'jquery', 'laydate', 'form', 'tableSelect'], function () {
         var table = layui.table;
         var layer = layui.layer;
         var $ = layui.jquery;
@@ -273,11 +280,11 @@
             searchKey: 'contact',	//搜索输入框的name值 默认keyword
             searchPlaceholder: '联系人姓名搜索',	//搜索输入框的提示文字 默认关键词搜索
             table: {	//定义表格参数，与LAYUI的TABLE模块一致，只是无需再定义表格elem
-                url:'/custom/selectAll',
+                url: '/custom/selectAll',
                 cols: [
                     [
                         {type: 'radio'}
-                        ,{field: 'customId', title: '客户ID', align: 'center', sort: true, width: 90}
+                        , {field: 'customId', title: '客户ID', align: 'center', sort: true, width: 90}
                         , {field: 'contact', title: '联系人姓名', align: 'center', width: 120}
                         , {field: 'phone', title: '手机号', align: 'center', width: 140}
                     ]
@@ -296,11 +303,11 @@
             searchKey: 'contact',	//搜索输入框的name值 默认keyword
             searchPlaceholder: '联系人姓名搜索',	//搜索输入框的提示文字 默认关键词搜索
             table: {	//定义表格参数，与LAYUI的TABLE模块一致，只是无需再定义表格elem
-                url:'/custom/selectAll',
+                url: '/custom/selectAll',
                 cols: [
                     [
                         {type: 'radio'}
-                        ,{field: 'customId', title: '客户ID', align: 'center', sort: true, width: 90}
+                        , {field: 'customId', title: '客户ID', align: 'center', sort: true, width: 90}
                         , {field: 'contact', title: '联系人姓名', align: 'center', width: 120}
                         , {field: 'phone', title: '手机号', align: 'center', width: 140}
                     ]
@@ -344,7 +351,7 @@
                         , {field: 'createTime', title: '创建时间', align: 'center', width: 160}
                         , {field: 'updateBy', title: '修改人', align: 'center', width: 120}
                         , {field: 'updateTime', title: '修改时间', align: 'center', width: 160}
-                        , {field: 'proxyId', title: '代理人ID', align: 'center', width: 120,hide:true}
+                        , {field: 'proxyId', title: '代理人ID', align: 'center', width: 120, hide: true}
                         , {field: 'userName', title: '代理人', align: 'center', width: 120}
                         , {field: 'remark', title: '备注', align: 'center', width: 120}
                     ]
@@ -355,11 +362,8 @@
         let businessUrl = '/business/queryByCondition?customId=' + customeId
         var myTable = table.render({
             elem: '#businessTable'
-            , height: 400
             , url: businessUrl //数据接口
             , page: true //开启分页
-            , limit: 5
-            , limits: [5, 10, 15, 20, 25, 30]
             , toolbar: '#toolbarDemo'
             , cols: [
                 [ //表头
@@ -579,7 +583,7 @@
                 title: '选择商标类别',
                 type: 1,
                 content: $('#trademarkTypeSelect'),
-                area: ['650px', '830px']
+                area: ['650px', '600px']
             });
         })
 
@@ -589,7 +593,7 @@
                 title: '选择业务种类',
                 type: 1,
                 content: $('#businessSecondTypeSelect'),
-                area: ['670px', '830px']
+                area: ['670px', '600px']
             });
         })
 
