--- a/src/main/resources/templates/dept.html
+++ b/src/main/resources/templates/dept.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/layui/css/layui.css">
     <script src="/layui/layui.js"></script>
 </head>
-<body class="layui-layout-body">
+<body>
 <!--添加功能的form-->
 <form class="layui-form" action="" id="insertDeptForm"
       style="display: none;margin-right: 40px;margin-top: 20px">
@@ -159,7 +159,6 @@
             , toolbar: '#deptToolbar' //开启头部工具栏，并为其绑定左侧模板
             , defaultToolbar: ['filter', 'exports', 'print']
             , title: 'deptTable'
-            , limit: 10
             , cols: [
                 [ //表头
                     {type: 'checkbox', fixed: 'left'}
